--- a/index.css
+++ b/index.css
@@ -1,3 +1,54 @@
-#heading{
-    color: red;
+
+.header{
+    display: flex;
+    justify-content: space-between;
+    border: 1px black solid;
 }
+
+.logo {
+    width: 100px
+}
+
+.nav-items > ul {
+    display: flex;
+    list-style-type: none;
+}
+
+.nav-items > ul > li {
+    margin: 10px;
+    padding : 10px;
+}
+
+
+.res-card {
+    width: 200px;
+    height: 300px;
+    background-color: #f0f0f0;
+    padding: 5px;
+}
+
+.res-card:hover {
+    border: 1px solid black;
+    cursor: pointer;
+}
+
+.res-container {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 5px;
+}
+
+.search {
+    padding: 10px;
+}
+
+.res-logo {
+    width: 100%;
+    height: 45%;
+   
+}
+
+
+
+
+
