--- a/index.css
+++ b/index.css
@@ -22,9 +22,9 @@
 
 .res-card {
     width: 200px;
-    height: 300px;
     background-color: #f0f0f0;
     padding: 5px;
+    margin: 15px;
 }
 
 .res-card:hover {
