--- a/index.css
+++ b/index.css
@@ -53,4 +53,15 @@
     cursor: pointe;;
 }
 
+.shimmer-container {
+    display: flex;
+    flex-wrap: wrap;
+}
 
+.shimmer-card {
+    width : 200px;
+    height : 400px;
+    background-color: #f0f0f0; 
+    margin: 40px;
+    padding: 10px;
+}
